# python_training

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.yaml  README.md  pyproject.toml  vscode_tips.md
.github/: pull_request_template.md
.github/workflows/: continuous_integration.yaml
coding_problems/: sort_by_password.py
coding_problems/register_access/: problem.md  register_abstraction.py  spec.md  test_case.py
src/: README.md  main.py
src/classes/: __init__.py
src/data_types/: __init__.py
src/functions/: __init__.py
src/python_training/: README.md  ascii_art.py  main.py
src/python_training/01_basics/: 01_prints_and_docs.py  02_variables.py  03_data_types_and_structures.py  README.md  __init__.py  solutions.py
src/python_training/02_control_flow/: __init__.py
src/python_training/03_functions/: __init__.py
src/python_training/04_oop_and_classes/: README.md  __init__.py
users/my_user/bugothan/: example.py
