[project]
name = "python_training"
version = "0.1.0"
description = "An example project to help people learn how to code."
author = "maxbeagles11"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyreadline3 (>=3.5.4,<4.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "codespell (>=2.4.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
