[project]
name = "python_training"
version = "0.1.0"
description = "An example project to help people learn how to code."
author = "maxbeagles11"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyreadline3 (>=3.5.4,<4.0.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "codespell (>=2.4.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "setuptools (>=77.0.3,<78.0.0)"
]

packages = [{include = "python_training", from = "src"}]

[tool.poetry.scripts]
run_main = "python_training.main:main"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
